--- a/alineamiento_genetico.ipynb
+++ b/alineamiento_genetico.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "8778bf83-cd55-4835-a59a-c6654a1ad295",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import random\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from array import array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "c5eb9af5-8a09-4b88-9974-9ad7e32f205a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "9134ce46-20d2-4f48-aedf-dd0d2c4293a8",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "0d987ca7-3e05-4cb2-a856-17cd2c9413f2",
    "metadata": {},
    "outputs": [],
@@ -88,30 +89,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "ec7fd110-ee86-46fe-aaa7-a6d5788af6bc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "9715034f-d297-4ea6-90ec-b3cd4fe70743",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'matrix_sequence' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_4584\\351646046.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmatrix_sequence\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'output.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'matrix_sequence' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(115, 28)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([['L', 'O', 'P', ..., '*', '*', '*'],\n",
+       "       ['S', 'E', 'R', ..., '*', '*', '*'],\n",
+       "       ['L', '_', 'O', ..., '*', '*', '*'],\n",
+       "       ...,\n",
+       "       ['P', 'A', 'N', ..., '*', '*', '*'],\n",
+       "       ['C', 'E', 'L', ..., '*', '*', '*'],\n",
+       "       ['O', 'R', 'T', ..., '*', '*', '*']], dtype='<U1')"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def create_matrix_sequence(cells_array):\n",
+    "    array_cells_width = np.array([cell.width for cell in cells_array])\n",
+    "    \n",
+    "    matrix_sequence = np.array([['*' for _ in range(max(array_cells_width))] for _ in range(len(cells_array))])\n",
+    "    \n",
+    "    matrix_cells_sequence = [list(cell.sequence) for cell in cells_array]\n",
+    "    \n",
+    "\n",
+    "    for i, row in enumerate(matrix_cells_sequence):\n",
+    "        for j, column in enumerate(matrix_cells_sequence[i]):\n",
+    "            matrix_sequence[i][j] = matrix_cells_sequence[i][j]\n",
+    "    \n",
+    "    return matrix_sequence\n",
+    "matrix_sequence = create_matrix_sequence(cells_array)\n",
+    "\n",
+    "print(matrix_sequence.shape)\n",
+    "matrix_sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "7d3a37f9-2c92-4c36-aa9b-b725e92795c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
      ]
     }
    ],
+   "source": [
+    "print(len(\"PARANGARICUTIRIMICUARO\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "9715034f-d297-4ea6-90ec-b3cd4fe70743",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "pd.DataFrame(matrix_sequence).to_csv(r'output.csv')"
    ]
