se han agregado las iteraciones

--- a/alineamiento_genetico.ipynb
+++ b/alineamiento_genetico.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "8778bf83-cd55-4835-a59a-c6654a1ad295",
    "metadata": {},
    "outputs": [],
@@ -11,22 +11,43 @@
     "import matplotlib.pyplot as plt\n",
     "import random\n",
     "import pandas as pd\n",
+    "import os\n",
     "from array import array"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "c329fedd-3b6b-4acf-99ba-4359079a7c93",
+   "cell_type": "markdown",
+   "id": "4ce8cfdb-7263-4fac-a2db-aa1a454e9bf3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "GRAP_SIMBOL = '_'"
+    "### GLOBAL VARIABLES"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
+   "id": "c329fedd-3b6b-4acf-99ba-4359079a7c93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GRAP_SIMBOL = '_'\n",
+    "\n",
+    "# Specify the path to your text file\n",
+    "SEQUENCE_FILE = r'C:\\Users\\Sergio\\Documents\\Sergio Lopez\\Universidad\\6to semestre\\Analisis y modelacion de sistemas\\Alineamineto genetico\\Secuencias.txt'\n",
+    "#SEQUENCE_FILE = r'C:\\Users\\Sergio\\Documents\\Sergio Lopez\\Universidad\\6to semestre\\Analisis y modelacion de sistemas\\Alineamineto genetico\\Secuencias_Nombres.txt'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f045a5fc-b8c4-4af5-a728-30c7693970f9",
+   "metadata": {},
+   "source": [
+    "### Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "c5eb9af5-8a09-4b88-9974-9ad7e32f205a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "9134ce46-20d2-4f48-aedf-dd0d2c4293a8",
    "metadata": {},
    "outputs": [],
@@ -62,25 +83,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
+   "id": "9595eefb-4f66-4133-939e-04c57fea4f8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function to parse the sequences from the text file\n",
+    "def parse_sequences(file_path):\n",
+    "    sequences = []\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        sequence = \"\"\n",
+    "        for line in file:\n",
+    "            line = line.strip()\n",
+    "            if line.startswith(\">\"):\n",
+    "                if sequence:\n",
+    "                    sequences.append(sequence)\n",
+    "                sequence = \"\"\n",
+    "            else:\n",
+    "                sequence += line\n",
+    "        if sequence:\n",
+    "            sequences.append(sequence)\n",
+    "    return np.array(sequences)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "0d987ca7-3e05-4cb2-a856-17cd2c9413f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#JUST TEMPORALY WHEN YOU GET THE FILE .FAST JUST MODIFY THE FOLLOWING LINES : \n",
-    "array_words = np.array([\n",
-    "    \"MURCIELAGO\", \"PANADERIA\" , \"CELULAS\", \"SERGIO\", \"LOPEZ\", \"ORTIZ\", \"PARANGARICUTIRIMICUARO\"\n",
-    "],dtype = str)\n",
     "\n",
-    "def create_main_data_set(file_path, mutate_lavel = 2):\n",
+    "def create_main_data_set(SEQUENCE_FILE,sequence_array_parameter = np.array([]), mutate_lavel = 2):\n",
     "    #READ THE FILE AND EXTRACT HOW MANY CELLS IT HAS INVOLVE\n",
     "\n",
-    "    cell_num = 115\n",
     "    cells_array = np.array([])\n",
     "    \n",
-    "    for i in range(cell_num):\n",
-    "        #random_word = array_words[random.randint(0, (len(array_words) - 1))]\n",
-    "        random_word = array_words[0] #REMOVE THIS LINE AND DISCOMMENT THE LAST ONE\n",
+    "    \n",
+    "    \n",
+    "    if len(sequence_array_parameter) == 0:\n",
+    "        # Call the function to parse sequences and store them in a NumPy array\n",
+    "        sequences_array = parse_sequences(SEQUENCE_FILE)\n",
+    "    \n",
+    "    \n",
+    "    for i , sequence_string in enumerate(sequences_array):\n",
+    "        random_word = sequence_string\n",
+    "        #random_word = array_words[0] #REMOVE THIS LINE AND DISCOMMENT THE LAST ONE\n",
     "        cell = Cell(random_word)\n",
     "        \n",
     "        if mutate_lavel == 1:\n",
@@ -95,44 +143,22 @@
     "        \n",
     "    return cells_array\n",
     "        \n",
-    "cells_array = create_main_data_set(\"ASD\", 1)\n"
+    "#cells_array = create_main_data_set(SEQUENCE_FILE, mutate_lavel = 1)\n",
+    "#cells_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "ec7fd110-ee86-46fe-aaa7-a6d5788af6bc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(115, 12)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([['M', 'U', '_', ..., 'A', 'G', 'O'],\n",
-       "       ['M', 'U', 'R', ..., 'O', '*', '*'],\n",
-       "       ['M', 'U', 'R', ..., 'O', '*', '*'],\n",
-       "       ...,\n",
-       "       ['M', 'U', 'R', ..., 'G', 'O', '*'],\n",
-       "       ['M', 'U', 'R', ..., 'G', 'O', '*'],\n",
-       "       ['M', '_', 'U', ..., 'G', 'O', '*']], dtype='<U1')"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_matrix_sequence(cells_array):\n",
     "    array_cells_width = np.array([cell.width for cell in cells_array])\n",
     "    \n",
-    "    matrix_sequence = np.array([['*' for _ in range(max(array_cells_width))] for _ in range(len(cells_array))])\n",
+    "    #MODIFY THE * TO _ \n",
+    "    matrix_sequence = np.array([[GRAP_SIMBOL for _ in range(max(array_cells_width))] for _ in range(len(cells_array))])\n",
     "    \n",
     "    matrix_cells_sequence = [list(cell.sequence) for cell in cells_array]\n",
     "    \n",
@@ -142,53 +168,18 @@
     "            matrix_sequence[i][j] = matrix_cells_sequence[i][j]\n",
     "    \n",
     "    return matrix_sequence\n",
-    "matrix_sequence = create_matrix_sequence(cells_array)\n",
+    "#matrix_sequence = create_matrix_sequence(cells_array)\n",
     "\n",
-    "print(matrix_sequence.shape)\n",
-    "matrix_sequence"
+    "#print(matrix_sequence.shape)\n",
+    "#matrix_sequence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "9715034f-d297-4ea6-90ec-b3cd4fe70743",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: 'output.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8376\\351646046.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmatrix_sequence\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'output.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, sep, na_rep, float_format, columns, header, index, index_label, mode, encoding, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, decimal, errors, storage_options)\u001b[0m\n\u001b[0;32m   3549\u001b[0m         )\n\u001b[0;32m   3550\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3551\u001b[1;33m         return DataFrameRenderer(formatter).to_csv(\n\u001b[0m\u001b[0;32m   3552\u001b[0m             \u001b[0mpath_or_buf\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3553\u001b[0m             \u001b[0mline_terminator\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mline_terminator\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\format.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, encoding, sep, columns, index_label, mode, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, errors, storage_options)\u001b[0m\n\u001b[0;32m   1178\u001b[0m             \u001b[0mformatter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfmt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1179\u001b[0m         )\n\u001b[1;32m-> 1180\u001b[1;33m         \u001b[0mcsv_formatter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1181\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1182\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mcreated_buffer\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\csvs.py\u001b[0m in \u001b[0;36msave\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    239\u001b[0m         \"\"\"\n\u001b[0;32m    240\u001b[0m         \u001b[1;31m# apply compression and byte/text conversion\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 241\u001b[1;33m         with get_handle(\n\u001b[0m\u001b[0;32m    242\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    243\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\common.py\u001b[0m in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    784\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;34m\"b\"\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    785\u001b[0m             \u001b[1;31m# Encoding\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 786\u001b[1;33m             handle = open(\n\u001b[0m\u001b[0;32m    787\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    788\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [Errno 13] Permission denied: 'output.csv'"
-     ]
-    }
-   ],
-   "source": [
-    "pd.DataFrame(matrix_sequence).to_csv(r'output.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "6336ba20-917a-42bc-8e7d-1e0c2c2a3aa9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The good points number : 24\n",
-      "The bad points number : 96\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def evaluation(matrix_sequence):\n",
     "    num_rows, num_columns = matrix_sequence.shape\n",
@@ -197,12 +188,14 @@
     "    #COUNT THE GOOD POINTS\n",
     "    for col in range(num_columns):\n",
     "        column_values = matrix_sequence[:, col]\n",
-    "        is_same = all(column_values == column_values[0])\n",
-    "        same_value_columns.append(is_same)\n",
+    "        if column_values[0] != GRAP_SIMBOL :\n",
+    "            is_same = all(column_values == column_values[0])\n",
+    "            same_value_columns.append(is_same)\n",
     "\n",
+    "    #print(same_value_columns)\n",
     "    count_same_value_columns = np.count_nonzero(same_value_columns)\n",
     "        \n",
-    "    good_points = num_columns * count_same_value_columns\n",
+    "    good_points = num_rows * count_same_value_columns\n",
     "    \n",
     "    #COUNT THE BAD POINTS '_'\n",
     "    \n",
@@ -211,18 +204,106 @@
     "    return good_points , bad_points\n",
     "\n",
     "\n",
-    "good_points , bad_points = evaluation(matrix_sequence)\n",
+    "#matrix_sequence[ : , 1] = 'A' #JUST TO MAKE TESTES\n",
+    "\n",
+    "#good_points , bad_points = evaluation(matrix_sequence)\n",
     "\n",
     "\n",
     "\n",
-    "print(f\"The good points number : {good_points}\")\n",
-    "print(f\"The bad points number : {bad_points}\")"
+    "#print(f\"The good points number : {good_points}\")\n",
+    "#print(f\"The bad points number : {bad_points}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "74207c90-b68d-423d-8468-cecde2aff56b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def iterator(N_ITERATIONS):\n",
+    "    universe = []\n",
+    "    \n",
+    "    for i in range(N_ITERATIONS):\n",
+    "        cells_array = create_main_data_set(SEQUENCE_FILE, mutate_lavel = 1)\n",
+    "        matrix_sequence = create_matrix_sequence(cells_array)\n",
+    "        good_points , bad_points = evaluation(matrix_sequence)\n",
+    "        content = {\n",
+    "            'matrix_sequence' : matrix_sequence,\n",
+    "            'good_points' : good_points,\n",
+    "            'bad_points' : bad_points\n",
+    "        }\n",
+    "        \n",
+    "        universe.append(content)\n",
+    "    return universe\n",
+    "    \n",
+    "result = iterator(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "dfbe3c76-677f-425c-bc23-336cd829fef7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "only bad points\n"
+     ]
+    }
+   ],
+   "source": [
+    "open  = False\n",
+    "for index, item in enumerate(result):\n",
+    "    if item['good_points'] != 0:\n",
+    "        pd.DataFrame( item['matrix_sequence'] ).to_csv(r'output.csv')\n",
+    "        filename = r\"C:\\Users\\Sergio\\Documents\\Sergio Lopez\\Universidad\\6to semestre\\Analisis y modelacion de sistemas\\Alineamineto genetico\\output.csv\"\n",
+    "\n",
+    "        # Enclose the file path in double quotes\n",
+    "        os.system('start excel.exe \"{}\"'.format(filename))\n",
+    "        print(\"good points\")\n",
+    "        open = True\n",
+    "    \n",
+    "if open == False : \n",
+    "    pd.DataFrame( result[0]['matrix_sequence'] ).to_csv(r'output.csv')\n",
+    "    filename = r\"C:\\Users\\Sergio\\Documents\\Sergio Lopez\\Universidad\\6to semestre\\Analisis y modelacion de sistemas\\Alineamineto genetico\\output.csv\"\n",
+    "    print(\"only bad points\")\n",
+    "    # Enclose the file path in double quotes\n",
+    "    os.system('start excel.exe \"{}\"'.format(filename))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1f105bd-9c7e-4668-9f90-21009e017810",
+   "id": "b8a15eb6-512c-46bb-b1cd-c65fab733057",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix_sequence.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee1e86c0-b9b6-41d3-a429-1b282d980526",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#OPEN THE DATAFRAME IN EXCEL FILE\n",
+    "pd.DataFrame(matrix_sequence).to_csv(r'output.csv')\n",
+    "\n",
+    "filename = r\"C:\\Users\\Sergio\\Documents\\Sergio Lopez\\Universidad\\6to semestre\\Analisis y modelacion de sistemas\\Alineamineto genetico\\output.csv\"\n",
+    "\n",
+    "# Enclose the file path in double quotes\n",
+    "os.system('start excel.exe \"{}\"'.format(filename))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e867bc19-3baa-424b-93e1-b05203971aa3",
    "metadata": {},
    "outputs": [],
    "source": []
