--- a/alineamiento_genetico.ipynb
+++ b/alineamiento_genetico.ipynb
@@ -221,11 +221,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def iterator(N_ITERATIONS):\n",
+    "def iterator(N_ITERATIONS, data_set = []):\n",
     "    universe = []\n",
     "    \n",
     "    for i in range(N_ITERATIONS):\n",
-    "        cells_array = create_main_data_set(SEQUENCE_FILE, mutate_lavel = 1)\n",
+    "        if len(data_set) == 0:\n",
+    "            cells_array = create_main_data_set(SEQUENCE_FILE, mutate_lavel = 1)\n",
+    "        else:\n",
+    "            cells_array = data_set\n",
     "        matrix_sequence = create_matrix_sequence(cells_array)\n",
     "        good_points , bad_points = evaluation(matrix_sequence)\n",
     "        content = {\n",
@@ -242,18 +245,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "dfbe3c76-677f-425c-bc23-336cd829fef7",
+   "execution_count": 32,
+   "id": "d78a0a4d-d63a-42bf-a072-a1a0662c5c10",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "only bad points\n"
+      "[['_', 'A', 'A', 'G', '_', 'T', 'A', 'G', 'G', 'A', '_', 'A', 'T', '_', 'A', 'A', 'T', '_', 'A', 'T', 'C', '_', 'T', 'T', 'A', 'T', 'C', 'A', 'T', 'T', '_', 'A', 'T', '_', 'A', 'G', 'A', '_', 'T', 'A', 'A', 'A', 'A', 'A', '_', 'C', 'C', 'T', 'T', 'C', 'T', '_', 'G', 'A', 'A', 'T', 'T', '_', '_', 'T', 'G', 'C', 'T', 'T', 'A', '_', 'G', 'T', 'G', '_', 'T', 'G', 'T', '_', 'A', 'T', 'A', '_', '_', 'C', 'G', 'A', 'C', 'T', '_', 'A', 'G', 'A', 'C', 'A', 'T', 'A', 'T', 'A', 'T', '_', 'C', 'A', 'G', 'C', 'T', 'C', 'G', 'C', 'C', 'G', '_', 'A', '_', 'T', 'T', 'A', 'T', 'T', 'T', '_', 'G', 'G', '_', '_', 'A', 'T', 'T', 'A', '_', 'T', 'T', 'C', 'C', 'C', 'T', 'G', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_'], ['C', 'A', 'G', 'T', 'A', 'A', 'A', 'G', 'A', 'G', 'T', 'G', '_', 'G', 'A', 'T', 'G', 'T', 'A', 'A', 'G', 'A', 'A', 'C', 'C', 'G', 'T', 'C', 'C', 'G', 'A', 'T', 'C', 'T', 'A', 'C', 'C', 'A', 'G', 'A', 'T', 'G', 'T', 'G', 'A', 'T', 'A', 'G', 'A', 'G', 'G', 'T', 'T', 'G', 'C', 'C', 'A', 'G', 'T', 'A', 'A', 'A', 'A', 'A', 'A', 'T', 'T', 'G', 'C', 'A', 'T', 'A', '_', 'A', 'T', 'A', 'A', 'T', 'T', 'G', 'A', 'T', 'T', 'A', 'A', 'T', 'C', 'C', 'T', 'T', 'T', 'A', 'A', 'T', 'A', 'T', 'T', 'G', 'T', 'T', 'T', 'A', 'G', 'A', 'A', 'T', '_', 'A', 'T', 'A', 'T', 'C', 'C', 'G', 'T', 'C', 'A', 'G', 'A', 'T', 'A', 'A', 'T', 'C', 'C', 'T', '_', 'A', 'A', 'A', 'A', 'A', 'T', 'A', 'A', 'C', 'G', 'A', 'T', 'A', 'T', 'G', 'A', 'T', 'G', 'G', 'C', 'G', 'G', 'A', 'A', 'A', 'T', 'C', 'G', 'T', 'C', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_'], ['C', 'T', '_', 'T', 'C', 'A', 'A', 'T', 'T', 'A', 'C', 'C', 'C', 'T', 'G', 'C', 'T', 'G', 'A', 'C', 'G', 'C', 'G', 'A', 'G', 'A', 'T', 'A', 'C', 'C', 'T', 'T', 'A', 'T', 'G', 'C', 'A', 'T', 'C', 'G', 'A', 'A', 'G', 'G', 'T', 'A', 'A', 'A', 'G', 'C', 'G', 'A', 'T', 'G', 'A', 'A', 'T', 'T', 'T', 'A', 'T', 'C', 'C', 'A', 'A', 'G', 'G', 'T', 'T', 'T', 'T', 'A', 'A', 'T', 'T', 'T', 'G', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_'], ['_', 'A', 'A', 'G', 'T', '_', 'A', 'G', 'G', 'A', 'A', '_', 'T', '_', 'A', 'A', 'T', 'A', 'T', 'C', 'T', 'T', 'A', 'T', 'C', 'A', 'T', 'T', 'A', 'T', 'A', 'G', 'A', 'T', 'A', 'A', 'A', 'A', 'A', 'C', 'C', 'T', 'T', '_', 'C', '_', 'T', 'G', 'A', 'A', 'T', 'T', 'T', 'G', 'C', 'T', 'T', 'A', '_', 'G', 'T', 'G', 'T', 'G', 'T', 'A', '_', 'T', 'A', 'C', 'G', 'A', 'C', 'T', 'A', 'G', 'A', 'C', 'A', 'T', '_', 'A', 'T', 'A', '_', 'T', 'C', 'A', 'G', 'C', 'T', 'C', 'G', 'C', 'C', 'G', 'A', 'T', 'T', 'A', '_', 'T', 'T', 'T', 'G', 'G', 'A', 'T', 'T', 'A', 'T', 'T', 'C', 'C', 'C', 'T', 'G', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_'], ['C', '_', 'A', 'G', 'T', 'A', 'A', 'A', 'G', '_', 'A', '_', 'G', 'T', 'G', 'G', 'A', 'T', 'G', 'T', 'A', 'A', 'G', 'A', '_', 'A', 'C', 'C', 'G', 'T', 'C', '_', 'C', 'G', '_', 'A', 'T', 'C', 'T', 'A', '_', 'C', 'C', 'A', 'G', 'A', 'T', 'G', 'T', 'G', '_', 'A', 'T', 'A', 'G', '_', 'A', 'G', 'G', 'T', '_', 'T', 'G', 'C', 'C', 'A', 'G', '_', 'T', 'A', 'A', 'A', 'A', 'A', 'A', '_', 'T', 'T', '_', 'G', 'C', 'A', 'T', 'A', 'A', '_', 'T', 'A', 'A', 'T', 'T', 'G', 'A', 'T', '_', 'T', 'A', 'A', 'T', 'C', 'C', 'T', 'T', '_', 'T', '_', 'A', 'A', 'T', 'A', 'T', 'T', 'G', 'T', 'T', '_', 'T', 'A', 'G', 'A', 'A', 'T', 'A', 'T', 'A', 'T', 'C', 'C', '_', 'G', 'T', 'C', 'A', 'G', 'A', 'T', 'A', 'A', 'T', 'C', 'C', 'T', 'A', 'A', '_', 'A', 'A', 'A', 'T', 'A', '_', 'A', 'C', 'G', 'A', 'T', 'A', 'T', 'G', '_', 'A', 'T', 'G', 'G', 'C', '_', 'G', 'G', 'A', 'A', 'A', 'T', 'C', 'G', 'T', 'C'], ['C', '_', 'T', 'T', 'C', 'A', 'A', 'T', 'T', 'A', 'C', 'C', 'C', 'T', 'G', 'C', 'T', 'G', 'A', 'C', 'G', 'C', 'G', 'A', 'G', 'A', 'T', '_', 'A', 'C', 'C', 'T', 'T', '_', 'A', 'T', 'G', 'C', 'A', 'T', 'C', 'G', 'A', 'A', 'G', '_', 'G', 'T', 'A', 'A', 'A', 'G', '_', 'C', 'G', '_', 'A', 'T', 'G', 'A', 'A', 'T', 'T', 'T', 'A', 'T', 'C', 'C', 'A', '_', 'A', 'G', 'G', 'T', 'T', 'T', 'T', '_', 'A', 'A', 'T', 'T', 'T', 'G', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_']]\n",
+      "['_AAG_TAGGA_AT_AAT_ATC_TTATCATT_AT_AGA_TAAAAA_CCTTCT_GAATT__TGCTTA_GTG_TGT_ATA__CGACT_AGACATATAT_CAGCTCGCCG_A_TTATTT_GG__ATTA_TTCCCTG____________________________________________', 'CAGTAAAGAGTG_GATGTAAGAACCGTCCGATCTACCAGATGTGATAGAGGTTGCCAGTAAAAAATTGCATA_ATAATTGATTAATCCTTTAATATTGTTTAGAAT_ATATCCGTCAGATAATCCT_AAAAATAACGATATGATGGCGGAAATCGTC___________________', 'CT_TCAATTACCCTGCTGACGCGAGATACCTTATGCATCGAAGGTAAAGCGATGAATTTATCCAAGGTTTTAATTTG___________________________________________________________________________________________________', '_AAGT_AGGAA_T_AATATCTTATCATTATAGATAAAAACCTT_C_TGAATTTGCTTA_GTGTGTA_TACGACTAGACAT_ATA_TCAGCTCGCCGATTA_TTTGGATTATTCCCTG___________________________________________________________', 'C_AGTAAAG_A_GTGGATGTAAGA_ACCGTC_CG_ATCTA_CCAGATGTG_ATAG_AGGT_TGCCAG_TAAAAAA_TT_GCATAA_TAATTGAT_TAATCCTT_T_AATATTGTT_TAGAATATATCC_GTCAGATAATCCTAA_AAATA_ACGATATG_ATGGC_GGAAATCGTC', 'C_TTCAATTACCCTGCTGACGCGAGAT_ACCTT_ATGCATCGAAG_GTAAAG_CG_ATGAATTTATCCA_AGGTTTT_AATTTG____________________________________________________________________________________________']\n",
+      "The lenght of the matrix is : 6\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'width'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16376\\2061109318.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m     \u001b[0mcore_iterations\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmutation\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mnumber_iterations\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mmax_iterations\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 37\u001b[1;33m \u001b[0mcore_iterations\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m \u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16376\\2061109318.py\u001b[0m in \u001b[0;36mcore_iterations\u001b[1;34m(items, number_iterations, max_iterations)\u001b[0m\n\u001b[0;32m     29\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_matrix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"The lenght of the matrix is : {len(new_matrix)}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m     \u001b[0mmutation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0miterator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_matrix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     32\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"------------------\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmutation\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16376\\3843203051.py\u001b[0m in \u001b[0;36miterator\u001b[1;34m(N_ITERATIONS, data_set)\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m             \u001b[0mcells_array\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_set\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[0mmatrix_sequence\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_matrix_sequence\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcells_array\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m         \u001b[0mgood_points\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mbad_points\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mevaluation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmatrix_sequence\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         content = {\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16376\\619290389.py\u001b[0m in \u001b[0;36mcreate_matrix_sequence\u001b[1;34m(cells_array)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcreate_matrix_sequence\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcells_array\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0marray_cells_width\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcell\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwidth\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcell\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcells_array\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;31m#MODIFY THE * TO _\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mmatrix_sequence\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mGRAP_SIMBOL\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray_cells_width\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcells_array\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16376\\619290389.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcreate_matrix_sequence\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcells_array\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0marray_cells_width\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcell\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwidth\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcell\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcells_array\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;31m#MODIFY THE * TO _\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mmatrix_sequence\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mGRAP_SIMBOL\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray_cells_width\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcells_array\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'width'"
      ]
     }
    ],
+   "source": [
+    "#sequence_array_parameter create_main_data_set\n",
+    "\n",
+    "def core_iterations(items, number_iterations, max_iterations):\n",
+    "    new_items = []\n",
+    "    \n",
+    "    if  number_iterations == 0:\n",
+    "        for index, item in enumerate(items):\n",
+    "            if item['good_points'] != 0:\n",
+    "                new_items.append(item)\n",
+    "   \n",
+    "    \n",
+    "    if len(new_items) == 0 : \n",
+    "        new_items.append(items[0])\n",
+    "        print(\"just bad points\")\n",
+    "    \n",
+    "    if number_iterations == max_iterations :\n",
+    "        print('thats it')\n",
+    "        print(items)\n",
+    "        return\n",
+    "    \n",
+    "    \n",
+    "    matrix = new_items[0]['matrix_sequence'].tolist()\n",
+    "    new_matrix = []\n",
+    "    print(matrix)\n",
+    "    \n",
+    "    for index, item in enumerate(matrix):\n",
+    "            new_matrix.append(''.join(item))\n",
+    "        \n",
+    "    print(new_matrix)\n",
+    "    print(f\"The lenght of the matrix is : {len(new_matrix)}\")\n",
+    "    mutation = iterator(5, new_matrix)\n",
+    "    print(\"------------------\")\n",
+    "    print(mutation)\n",
+    "    print(\"------------------\")\n",
+    " \n",
+    "    core_iterations(mutation , number_iterations + 1 , max_iterations )\n",
+    "core_iterations(result , 0, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfbe3c76-677f-425c-bc23-336cd829fef7",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "open  = False\n",
     "for index, item in enumerate(result):\n",
